[tool.poetry]
name = "questionbank"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
django-allauth = "^0.42.0"
django-ckeditor = "^6.0.0"
django-crispy-forms = "^1.9.2"
django-filter = "^2.4.0"
django-taggit = "^1.3.0"
django-webpack-loader = "^0.7.0"
pycparser = "^2.20"
argon2-cffi = "^20.1.0"
psycopg2 = "^2.8.6"
requests = "^2.24.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
factory-boy = "^3.1.0"
faker = "^4.9.0"
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-django = "^3.10.0"
django-debug-toolbar = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
